bk_ida/gccida/c1/make_regs_eqv
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_regs_eqv/src/cse.c:1548:52: error: expected ')'
if ( cached_regno != old || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_regs_eqv/src/cse.c:1548:29: note: to match this '('
if ( cached_regno != old || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_regs_eqv/src/cse.c:1548:75: error: expected expression
if ( cached_regno != old || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_regs_eqv/src/cse.c:1549:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( old); 
 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_regs_eqv/src/cse.c:1568:66: error: use of undeclared identifier 'uid_cuid_0'
|| ( ( v10 = ( int *)reg_n_info->data.l[a1], v11 = *( ( _DWORD *)uid_cuid_0 + v10[1]), v11 > cse_basic_block_end) 
                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_regs_eqv/src/cse.c:1569:18: error: use of undeclared identifier 'uid_cuid_0'
|| *( ( _DWORD *)uid_cuid_0 + *v10) < cse_basic_block_start) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_regs_eqv/src/cse.c:1570:24: error: use of undeclared identifier 'uid_cuid_0'
&& v11 > *( ( _DWORD *)uid_cuid_0 + *( int *)( reg_n_info->data.l[first_reg] + 4)))) ) 
                       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_regs_eqv/src/obj/cse.o] Error 1
